Bug 259826 - Hover and pointer events on iPad/Catalyst should not rely on _UIHoverEventRespondable
Summary: Hover and pointer events on iPad/Catalyst should not rely on _UIHoverEventRes...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: UI Events (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Wenson Hsieh
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-08-04 07:57 PDT by Wenson Hsieh
Modified: 2023-08-04 18:57 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wenson Hsieh 2023-08-04 07:57:28 PDT
.
Comment 1 Radar WebKit Bug Importer 2023-08-04 07:57:39 PDT
<rdar://problem/113396945>
Comment 2 Wenson Hsieh 2023-08-04 10:37:01 PDT
Pull request: https://github.com/WebKit/WebKit/pull/16395
Comment 3 EWS 2023-08-04 18:57:14 PDT
Committed 266610@main (1d53e9e77279): <https://commits.webkit.org/266610@main>

Reviewed commits have been landed. Closing PR #16395 and removing active labels.